# bevies

./: Cargo.toml  README.md
.github/workflows/: build.yaml  pull-request.yaml
breakout/: Cargo.toml
breakout/src/: ball.rs  breakout_plugin.rs  bricks.rs  collider.rs  color.rs  main.rs  paddle.rs  scoreboard.rs  system_set.rs  velocity.rs  wall.rs
pokemon/: Cargo.toml
pokemon/src/: main.rs
pokemon/src/frame/: border.rs  mod.rs  plugin.rs  title.rs
pokemon/src/map/: mod.rs
pokemon/src/map/york_new/: mod.rs  player_house.rs  plugin.rs
pokemon/src/player/: mod.rs  player.rs  plugin.rs  setup.rs  sprites.rs
pokemon/src/tiles/: box_tiles.rs  main.rs  mod.rs  plugin.rs
src/: camera.rs  main.rs  window.rs
src/map/: main.rs  mod.rs  plugin.rs
src/player/: main.rs  mod.rs  plugin.rs
