[package]
name = "bevies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
bevy-inspector-egui = "0.13.0"
bevy_mod_debugdump = "0.5.0"
